# ChangeLog for sys-devel/llvm
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/llvm/ChangeLog,v 1.202 2014/06/29 09:59:33 mgorny Exp $

  29 Jun 2014; Michał Górny <mgorny@gentoo.org> llvm-9999.ebuild:
  Rename clang to ${CHOST}-clang-${PV}. Add multilib wrappers.

*llvm-3.4.2 (23 Jun 2014)

  23 Jun 2014; Bernard Cafarelli <voyageur@gentoo.org> +llvm-3.4.2.ebuild:
  Version bump, mostly fixes a gcc 4.9 build failure and change of libLLVM's
  DT_SONAME

  15 Jun 2014; Michał Górny <mgorny@gentoo.org>
  files/clang-3.3-gentoo-install.patch, llvm-3.3-r3.ebuild:
  Restore the old clang patch as clang-3.3-gentoo-install.patch, and use it for
  version 3.3-r3. Bug #513346.

*llvm-3.4.1-r2 (14 Jun 2014)

  14 Jun 2014; Michał Górny <mgorny@gentoo.org> +llvm-3.4.1-r2.ebuild,
  -llvm-3.4-r2.ebuild, -llvm-3.4.1-r1.ebuild,
  files/clang-3.4-gentoo-install.patch:
  Fix fixing LLVMgold.so plugin path for GNU linker, bug #508838.

  11 Jun 2014; Michał Górny <mgorny@gentoo.org>
  +files/llvm-3.4-cmake-configparser.patch, llvm-3.4-r2.ebuild,
  llvm-3.4.1-r1.ebuild:
  Always use built-in ConfigParser to work-around issues with configparser-3.2,
  bug #500856.

  11 May 2014; Michał Górny <mgorny@gentoo.org> -llvm-3.3-r1.ebuild,
  -llvm-3.4-r1.ebuild, -llvm-3.4.ebuild:
  Clean old versions up.

*llvm-3.4.1-r1 (10 May 2014)

  10 May 2014; Michał Górny <mgorny@gentoo.org> +llvm-3.4.1-r1.ebuild,
  -llvm-3.4.1.ebuild:
  Fix creating libLLVM-3.4.so compatibility alias.

  10 May 2014; Michał Górny <mgorny@gentoo.org> llvm-3.4.1.ebuild:
  Bump subslot since library name changes anyway. Unnecessarily.

  10 May 2014; Mike Gilbert <floppym@gentoo.org> llvm-3.4.1.ebuild:
  Fix PDEPEND on clang.

*llvm-3.4.1 (09 May 2014)

  09 May 2014; Michał Górny <mgorny@gentoo.org> +llvm-3.4.1.ebuild,
  metadata.xml:
  Version bump.

  01 May 2014; Michał Górny <mgorny@gentoo.org> llvm-3.3-r1.ebuild,